--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "pts-webcomponents",
   "version": "0.0.1",
-  "main": "dist/pts-webcomponents.esm.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Ben Jackson",
@@ -17,8 +18,13 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.1.1",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^29.2.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
   }
